# dynamical-mode-reduction

./: LICENSE  README.md  __init__.py  core.py  demo.ipynb  demo.py  pyproject.toml  setup_github.sh  test_dmr.py
dmr/: core.py
